--- a/evaluacion1-DarioIrribarra/Views/Datos/Guardar.cshtml
+++ b/evaluacion1-DarioIrribarra/Views/Datos/Guardar.cshtml
@@ -3,9 +3,17 @@
     ViewBag.Title = "¡Guardado!";
 }
 
-<h2>¡Guardado Exitoso!</h2>
 
-<div>
-    <p>Se han guardado los datos con éxito</p>
+
+<div class="container contact-form">
+    <div class="class=" container contact-form"">
+        <div class="contact-image">
+            <img src="~/Images/logo2_r.png" alt="wifi_logo" />
+        </div>
+    </div>
+    <form>
+        <h3>¡Se han guardado los datos con éxito!</h3>
+    </form>
 </div>
+
 
