--- a/evaluacion1-DarioIrribarra/Views/Shared/_layout.cshtml
+++ b/evaluacion1-DarioIrribarra/Views/Shared/_layout.cshtml
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width" />
     <!--Para dejar el título dinámico se agrega el "Title" en el viewbag-->
     <title>@ViewBag.Title - Los interneses</title>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/form_css.css" rel="stylesheet" type="text/css" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -16,7 +19,7 @@
                     <a class="nav-link" href="/Datos/Planes">Registre su plan</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/Datos/MostrarDatos">Vea sus planes</a>
+                    <a class="nav-link" href="/Datos/MostrarDatos">Listado clientes</a>
                 </li>
             </ul>
         </div>
@@ -25,11 +28,5 @@
         <!--Se cargan las páginas sobre el layout-->
         @RenderBody()
     </div>
-
-    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
-
-    <hr />
-    <footer class="text-center">¡Los interneses, los mejores planes!</footer>
 </body>
 </html>
